.metadata/.plugins/org.eclipse.cdt.ui/is1300Project.build.log
17:25:27 **** Incremental Build of configuration Debug for project is1300Project ****
make -j4 all 
arm-none-eabi-gcc "../Core/Src/test.c" -mcpu=cortex-m4 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L476xx -c -I../Core/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc -I../Drivers/STM32L4xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L4xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -fcyclomatic-complexity -MMD -MP -MF"Core/Src/test.d" -MT"Core/Src/test.o" --specs=nano.specs -mfpu=fpv4-sp-d16 -mfloat-abi=hard -mthumb -o "Core/Src/test.o"
../Core/Src/test.c: In function 'testPL':
../Core/Src/test.c:79:34: error: 'PL2' undeclared (first use in this function)
   79 |             if (HAL_GPIO_ReadPin(PL2, BUTTON_PIN) == GPIO_PIN_RESET)
      |                                  ^~~
../Core/Src/test.c:79:34: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/test.c:79:39: error: 'BUTTON_PIN' undeclared (first use in this function)
   79 |             if (HAL_GPIO_ReadPin(PL2, BUTTON_PIN) == GPIO_PIN_RESET)
      |                                       ^~~~~~~~~~
../Core/Src/test.c:83:39: error: 'BUTTON_PORT' undeclared (first use in this function)
   83 |               while (HAL_GPIO_ReadPin(BUTTON_PORT, BUTTON_PIN) == GPIO_PIN_RESET)
      |                                       ^~~~~~~~~~~
make: *** [Core/Src/subdir.mk:46: Core/Src/test.o] Error 1
"make -j4 all" terminated with exit code 2. Build might be incomplete.

17:25:28 Build Failed. 4 errors, 0 warnings. (took 876ms)

